# ChangeLog for xfce-extra/xfce4-trigger-launcher
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-trigger-launcher/ChangeLog,v 1.5 2003/09/25 21:21:49 bcowan Exp $

*xfce4-trigger-launcher-4.0.0 (25 Sep 2003)

  25 Sep 2003; Brad Cowan <bcowan@gentoo.org>
  xfce4-trigger-launcher-4.0.0.ebuild:
  First official release of xfce4.

*xfce4-trigger-launcher-3.99.4 (12 Sep 2003)

  12 Sep 2003; Brad Cowan <bcowan@gentoo.org>
  xfce4-trigger-launcher-3.99.4.ebuild:
  Version bump.

*xfce4-trigger-launcher-3.99.3 (03 Sep 2003)

  03 Sep 2003; Brad Cowan <bcowan@gentoo.org>
  xfce4-trigger-launcher-3.99.3.ebuild:
  Version bump.

*xfce4-trigger-launcher-3.99.2 (22 Jul 2003)

  22 Jul 2003; Brad Cowan <bcowan@gentoo.org>
  xfce4-trigger-launcher-3.99.2.ebuild:
  Version bump.

*xfce4-trigger-launcher-3.99.1 (15 Jul 2003)

  15 Jul 2003; Brad Cowan <bcowan@gentoo.org>
  xfce4-trigger-launcher-3.99.1.ebuild:
  Initial import.
