@@ -1,4 +1,6 @@
+MD5 bcd10883d714df82c8a1f21ba4dc942d xfce4-trigger-launcher-4.0.1.ebuild 695
 MD5 1e974b66c5ea7c37e6aef7b2059bfbc8 xfce4-trigger-launcher-4.0.0.ebuild 692
 MD5 31c59e46dc538abf20aeb52379a2a14c ChangeLog 1012
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 MD5 056d984fe45c2cb1a305c33dd64f7799 files/digest-xfce4-trigger-launcher-4.0.0 80
+MD5 6278951db2158e5d08071ead0a50e2c2 files/digest-xfce4-trigger-launcher-4.0.1 80
