@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-trigger-launcher
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-trigger-launcher/ChangeLog,v 1.5 2003/09/25 21:21:49 bcowan Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-trigger-launcher/ChangeLog,v 1.6 2003/11/13 00:40:47 bcowan Exp $
+
+*xfce4-trigger-launcher-4.0.1 (12 Nov 2003)
+
+  12 Nov 2003; Brad Cowan <bcowan@gentoo.org>
+  xfce4-trigger-launcher-4.0.1.ebuild:
+  bugfix release of xfce4.
 
 *xfce4-trigger-launcher-4.0.0 (25 Sep 2003)
 
